Fix Title Spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -391,4 +391,7 @@ li {
 .signup {
   width: 100%;
   text-align: center;
+  text-transform: uppercase;
+  font-family: monospace, sans-serif;
+  margin-bottom: 10px;
 }
